--- a/proj4/new-PolicySeq.yml
+++ b/proj4/new-PolicySeq.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: new
   version: new
   tags: []
-  description: ''
+  description: 'jj'
 spec:
   routing:
     - $ref: new:new-Route:new
