--- a/proj4/new-endpoint.yml
+++ b/proj4/new-endpoint.yml
@@ -17,3 +17,9 @@ spec:
           '201':
             response:
               $ref: default:Mock-Response-8le17k:1.0
+        conditionalResponse:
+          - condition: hh
+            statusCode: 209
+            response:
+              $ref: default:Mock-Response-r6njzt:1.0
+
